--- a/public/p5/package.json
+++ b/public/p5/package.json
@@ -2,6 +2,7 @@
   "name": "p5",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "p5": "^1.11.2"
+    "p5": "^1.11.2",
+    "p5.sound": "^0.1.0"
   }
 }
